fix UI align issue

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,7 +14,6 @@ code {
 
 
 .container{
-  max-width: 960px;
   margin-right: auto;
   margin-left: auto;
   padding-left: 15px;
